# jarvis

./: .dockerignore  .gitignore  CODE_STRUCTURE.md  DOCKER.md  Dockerfile  Dockerfile.k8s  Makefile  QUICKSTART.md  README.md  docker-compose.yml  migrate_add_app_id_to_reminders.py  migrate_add_app_id_to_reminders.sql  migrate_add_file_content.py  migrate_add_is_completed.py  migrate_add_is_completed.sql  migrate_add_subtask_content.py  migrate_add_subtasks.py  migrate_add_todo.py  migrate_add_todo_subtasks.py  migrate_subtask_reminder_optional.py  pyproject.toml  requirements.txt  run.sh
app/: __init__.py  config.py  database.py  main.py  models.py  scheduler.py  schemas.py
app/api/: apps.py  excel.py  reminders.py  tasks.py  websocket.py
app/apps/: __init__.py
app/apps/excel/: __init__.py  api.py  app.py  schemas.py  service.py
app/apps/tasks/: __init__.py  api.py  app.py  schemas.py  service.py
app/apps/todo/: __init__.py  api.py  app.py  schemas.py  service.py
app/core/: __init__.py  app_interface.py  app_manager.py
app/services/: __init__.py  app_service.py  excel_service.py  notification_service.py  reminder_service.py  task_service.py
app/utils/: timezone.py
data/excel_rules/: nova-1.json  nova-2-1.json  nova-2.json  nova-默认.json
docs/: APP_DEVELOPMENT.md  APP_NOTIFICATION_GUIDE.md  ARCHITECTURE.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
frontend/src/apps/: registry.tsx
k8s/: .gitignore  README.md  deploy.sh  jarvis-full.yaml  jarvis.yaml
(+36 files in other folders)
